<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context="com.appshoppinglist.Activities.ListCreationActivity" android:id="@+id/constraintLayout">
        <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:id="@+id/appBar">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/constraintLayoutToolbar">

                <androidx.appcompat.widget.Toolbar
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/colorPrimary"
                        android:theme="?attr/actionBarTheme"
                        android:minHeight="?attr/actionBarSize" android:id="@+id/toolbar"
                        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.0"/>
                <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        app:srcCompat="@drawable/ic_baseline_arrow_back_24"
                        android:id="@+id/toolBarArrowBack"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/toolbar"
                        app:tint="@color/yellow"
                        android:layout_marginStart="16dp" android:clickable="true"/>
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@android:drawable/ic_menu_save"
                        android:id="@+id/toolBarSave"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/black"
                        android:clickable="true" app:layout_constraintEnd_toStartOf="@+id/toolBarDelete"
                        android:layout_marginEnd="8dp"/>
                <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        app:srcCompat="@drawable/ic_baseline_delete_24"
                        android:id="@+id/toolBarDelete"
                        app:tint="@color/red"
                        app:layout_constraintEnd_toStartOf="@+id/toolBarAdd"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginEnd="8dp" android:clickable="true"/>
                <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        app:srcCompat="@drawable/ic_baseline_add_24"
                        android:id="@+id/toolBarAdd"
                        app:layout_constraintEnd_toEndOf="@+id/toolbar"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:tint="@color/yellow"
                        android:layout_marginEnd="8dp" android:clickable="true"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.AppBarLayout>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/listTitle"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/titleName"
                android:textStyle="bold" android:textAlignment="center"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="60dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>