<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:id="@+id/managerListLayout">
    <Button
            android:text="neuste Liste löschen"
            android:layout_width="172dp"
            android:layout_height="wrap_content" android:id="@+id/deleteListButton"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginBottom="16dp"/>
    <Button
            android:text="Neue Liste Hinzufügen"
            android:layout_width="172dp"
            android:layout_height="wrap_content" android:id="@+id/createNewListButton"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/deleteListButton"
            android:layout_marginStart="8dp" android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
