<resources>
    <string name="app_name">Einkaufsliste</string>
    <string name="title">Einkaufsliste</string>
    <string name="button_start_menu">Listen verwalten</string>
    <string name="button_add_list">Liste hinzufügen</string>
    <string name="name_list">Liste 1</string>
    <string name="titleName">Titel</string>
    <string name="saveListButton">Liste speichern</string>

</resources>